--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,75 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
+@article{sato2025quantumcircuitlearningusing,
+  abbr={arXiv},
+  selected={false},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+  title={Quantum Circuit Learning Using Non-Integrable System Dynamics}, 
+  author={Ryutaro Sato and Yasuhiro Aota and Takaharu Yoishida and Hideaki Kawaguchi and Yuichiro Mori and Hiroki Kuji and Yuichiro Matsuzaki},
+  year={2025},
+  arxiv = {2504.18090},
+  abstract = {Quantum machine learning is an approach that aims to improve the performance of machine learning methods by leveraging the properties of quantum computers. In quantum circuit learning (QCL), a supervised learning method that can be implemented using variational quantum algorithms (VQAs), the process of encoding input data into quantum states has been widely discussed for its important role on the expressive power of learning models. In particular, the properties of the eigenvalues of the Hamiltonian used for encoding significantly influence model performance. Recent encoding methods have demonstrated that the expressive power of learning models can be enhanced by applying exponentially large magnetic fields proportional to the number of qubits. However, this approach poses a challenge as it requires exponentially increasing magnetic fields, which are impractical for implementation in large-scale systems. Here, we propose a QCL method that leverages a non-integrable Hamiltonian for encoding, aiming to achieve both enhanced expressive power and practical feasibility. We find that the thermalization properties of non-integrable systems over long timescales, implying that the energy difference has a low probability to be degenerate, lead to an enhanced expressive power for QCL. Since the required magnetic field strength remains within a practical range, our approach to using the non-integrable system is suitable for large-scale quantum computers. Our results bridge the dynamics of non-integrable systems and the field of quantum machine learning, suggesting the potential for significant interdisciplinary contributions.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@article{machida2025identification,
+  abbr={Jpn. J. Appl. Phys.},
   selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
   bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  title={{Identification of phase plate properties using photonic quantum sensor networks}},
+  author={Machida, Yusuke and Kuji, Hiroki and Mori, Yuichiro and Kawaguchi, Hideaki and Imoto, Takashi and Takeuchi, Yuki and Ishizaki, Miku and Matsuzaki, Yuichiro},
+  journal={Jpn. J. Appl. Phys.},
+  pages={042618},
+  year = {2025},
+  doi = {10.35848/1347-4065/adf427},
+  arxiv={2504.18135},
+  abstract={Quantum sensor networks (QSNs) utilizing photons have traditionally been employed to estimate continuous variables, such as relative phases. Recently, theoretical studies have suggested that QSNs can also be effective for discrete-variable measurements. Here, we propose a QSN scheme for distinguishing properties of phase plates using an optical photon. We demonstrate that employing non-local photon states enables more accurate discrimination than using local photon states for our case. Our results open a new direction for applying QSNs to discrete-variable measurements.}
 }
 
-@book{przibram1967letters,
+@article{kuji2025variational,
+  abbr={arXiv},
+  selected={false},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+  title={Variational quantum-neural hybrid imaginary time evolution},
+  author={Kuji, Hiroki and Shingu, Yuta and Nikuni, Tetsuro},
+  year = {2025},
+  arxiv = {2503.22570},
+  abstract = {Numerous methodologies have been proposed for performing imaginary time evolution (ITE) using quantum computers. Among these, variational ITE (VITE) for noisy intermediate-scale quantum (NISQ) computers has attracted much attention, which uses parametrized quantum circuits to mimic non-unitary dynamics. However, conventional variational quantum algorithms including VITE face challenges in achieving high accuracy due to their strong dependence on the choice of ansatz quantum circuits. Recently, the variational quantum-neural eigensolver (VQNHE), which combines the neural network (NN) with the variational quantum eigensolver, has been proposed. This approach enhances performance of estimating the expectation values of the state given by the parametrized quantum circuit and NN. In this study, we propose a variational quantum-neural hybrid ITE method (VQNHITE). Our proposal accurately estimates ITE by combining the NN and parameterized quantum circuit. We tested our approach with numerical simulations to evaluate the performance of VQNHITE relative to VITE.}
+}
+
+@article{kuji2025robust,
+  abbr={Phys. Rev. A},
+  selected={true},
+  bibtex_show={true},
+  title={{Robust phase estimation of the ground-state energy without controlled time evolution on a quantum device}},
+  author={Kuji,  Hiroki and Shingu,  Yuta and Nikuni,  Tetsuro and Imoto,  Takashi and Sugisaki,  Kenji and Matsuzaki,  Yuichiro},
+  journal={Phys. Rev. A},
+  volume={111},
+  pages={042618},
+  year={2025},
+  arxiv={2412.19590},
+  doi={10.1103/PhysRevA.111.042618},
+  abstract={Estimating the ground-state energy of Hamiltonians in quantum systems is an important task. In this work, we demonstrate that the ground-state energy can be accurately estimated without controlled time evolution by using adiabatic state preparation (ASP) and Ramsey-type measurement. By considering the symmetry of the Hamiltonian governing the time evolution during ASP, we can prepare a superposition of the ground state and reference state whose eigenvalue is known. This enables the estimation of the ground-state energy via a Ramsey-type measurement. Furthermore, our method is robust against nonadiabatic transitions, making it suitable for use with early fault-tolerant quantum computers and quantum annealing.}
+}
+
+@article{kuji2024proposal,
+  abbr={arXiv},
+  selected={false},
+  bibtex_show={true},
+  title={Proposal for realizing quantum-spin systems on a two-dimensional square lattice with Dzyaloshinskii-Moriya interaction by the Floquet engineering using Rydberg atoms},
+  author={Kuji, Hiroki and Kunimi, Masaya and Nikuni, Tetsuro},
+  year = {2024},
+  arxiv = {2408.04160},
+  abstract = {We theoretically propose a method for implementing a Hamiltonian incorporating Heisenberg and Dzyaloshinskii-Moriya (DM) interactions within Rydberg atoms arranged in a two-dimensional square lattice, utilizing Floquet engineering. In our scheme, we use both global and local operations of the spins. The global operations can be realized by applying microwave pulses, and the local operations can be realized by locally addressing atoms with off-resonant lasers, which induce the site-dependent ac-Stark shift. Since our engineered Hamiltonian contains bond-dependent DM interactions, we expect the emergence of quantum skyrmions in the ground state.}
+}
+
+@article{tatsuta2024characterization,
+  abbr={arXiv},
+  selected={false},
+  bibtex_show={true},
+  title={Characterization and generation of a SQL-beating cat-like state through repetitive measurements},
+  author = {Tatsuta,  Mamiko and Matsuzaki,  Yuichiro and Kuji,  Hiroki and Hamazaki,  Ryusuke and Shimizu,  Akira},
+  year = {2024},
+  arxiv = {2407.06829},
+  abstract = {Sensitivity in metrology without entanglement is limited by standard quantum limit (SQL). Recent studies have found that the Heisenberg-limited scaling -- ultimate sensitivity in quantum metrology -- can be achieved by generalized cat states, characterized by an index that indicates coherence among macroscopically distinct states. Although generalized cat states include diverse states, encompassing classical mixtures of exponentially large numbers of states, the preparation of large generalized cat states has not been demonstrated yet. Here, we characterize SQL-beating cat-like states using the index q indicating macroscopic coherence and prove that any state with q>1.5 has a potential to surpass the SQL when used as a sensor. We then propose a protocol to generate them through repetitive measurements on a quantum spin system of N spins, which we call a spin ensemble. Starting from a thermal equilibrium state of the spin ensemble, we demonstrate that we can increase the coherence among the spin ensemble via repetitive weak measurements of its total magnetization, which is indirectly measured through an ancillary qubit collectively coupled to the ensemble. Notably, our method for creating the SQL-beating cat-like states requires no dynamical control over the spin ensemble. As a potential experimental realization, we discuss a hybrid system composed of a superconducting flux qubit and donor spins in silicon. Our results pave the way for the realization of entanglement-enhanced quantum metrology in state-of-the-art technology.}
 }
