--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,6 +63,7 @@
   pages={022614},
   year = {2025},
   arxiv = {2408.04160},
+  doi = {10.1103/5sh7-cgyr},
   abstract = {We theoretically propose a method for implementing a Hamiltonian incorporating Heisenberg and Dzyaloshinskii-Moriya (DM) interactions within Rydberg atoms arranged in a two-dimensional square lattice, utilizing Floquet engineering. In our scheme, we use both global and local operations of the spins. The global operations can be realized by applying microwave pulses, and the local operations can be realized by locally addressing atoms with off-resonant lasers, which induce the site-dependent ac-Stark shift. Since our engineered Hamiltonian contains bond-dependent DM interactions, we expect the emergence of quantum skyrmions in the ground state.}
 }
 
